  has been removed.

- "Copy" button in Activity Log window now copies entire log if nothing
  is selected.

- Added "Remove All Nodes" button to HyperSearch Results window
  (Carmine Lucarelli).

- Removed "Go to Text Area" (C+e C+e) action. "Scroll to Current Line"
  (C+e C+j) now sends focus to the text area, and also expands the
  current fold if the caret is not visible.

}}}
{{{ Plugin Loader

- The plugin manager now loads plugins immediately after they are
  installed if they are using the jEdit 4.2 plugin API, and unloads
  plugins when removing and updating. Note that a restart is still
  required after updating from a jEdit 4.1 version of a plugin to the
  4.2 plugin, but future updates do not require a restart.

- Added an option to Global Options->Plugin Manager to leave the
  downloaded ZIP archives in ~/.jedit/PluginManager.download.

- If a plugin failed to load, its actions, dockables, etc are no longer
  visible from the UI.

}}}
{{{ Scripting Changes

- BeanShell 1.3a1 included. This release features improved error
  reporting, code cleanups and minor bug fixes.

- For some reason the search and replace code was hard-coded to auto
  wrap around if it was run from a macro. I'm not sure what the original
  rationale for this was, but it has been changed to always respect the
  auto wrap flag.

}}}
{{{ Optimizations

- Fold visibility information is now stored in a more efficient manner.
  Folding should be faster and more robust. Also, the limit of 8 text
  areas editing the same buffer has been lifted.

}}}
{{{ Bug Fixes

- It was possible to open multiple plugin manager instances from the
  "Plugin Error" dialog box.

- Fixed selection issue when right-clicking on a file system browser
  window.

- The file system browser would report files larger than 1 megabyte as
  being an order of magnitude smaller, eg 13 kilobytes instead of 13
  megabytes.

- Changing the folding mode to "none" did not work correctly.
