@@ -112,6 +112,7 @@
 	<RULES SET="PHP" ESCAPE="\" HIGHLIGHT_DIGITS="TRUE">
 		<PROPS>
 			<PROPERTY NAME="commentStart" VALUE="/*" />
+			<PROPERTY NAME="commentEnd" VALUE="*/" />
 			<PROPERTY NAME="lineComment" VALUE="//" />
 		</PROPS>
 
